# ADA-70-

./: README.md
ADA University/: conf.txt
ADA University/bg/: .env  Cargo.toml  blog.db  data.db
ADA University/bg/src/: app.rs  main.rs
ADA University/static/articles/ftutyuytiyiyguiyui/: Antisemitizm nədir.pptx
ADA University/static/css/: about.css  advocateservice.css  certificates.css  course.css  design.css  education.-form.css  excursion.css  index.css  library.css  news.css  signin.css  style.css  stylearticles.css
ADA University/static/js/: design.js  main.js  modernizr.js  particles.js  plugins.js  register.js  scripts.js
ADA University/static/photos/: articles.html  index.html
ADA University/templates/: advocateservice.html  astronomyeducation.html  careerdevelopment.html  conferences.html  education.html  events.html  eventstailsaw.html  excursion.html  galacticfamily.html  galaxymeetingusa.html  index.html  library.html  login.html  membershipcard.html  schoolarship.html  scientificarticles.html  scientificarticlestailsaw.html  signin.html  spacemagazine.html  spacemagazinetailsaw.html  spacemagazineupload.html
